[package]
name = "qr_wasm"
version = "0.1.0"
authors = ["Phil Nash <philnash@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
qrcode = { version = "0.8", default-features = false, features = ["svg"] }
wasm-bindgen = "= 0.2.15"

[build-dependencies]
wasm-bindgen-cli = "= 0.2.15"